examples/test/testpolicy9617.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9617
  namespace: namespace145
spec:
  podSelector:
    matchLabels:
      key4: value3
      key22: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value21
      podSelector:
        matchLabels:
          key40: value36
          key15: value48
